[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Brink - BR Cobane Bold.otf" type="FontFile" id=1]
[ext_resource path="res://fonts/Brink - BR Cobane Light3D.otf" type="FontFile" id=2]
[ext_resource path="res://BatteryVoltageLineGraph.tscn" type="PackedScene" id=3]
[ext_resource path="res://serialData.tscn" type="PackedScene" id=4]
[ext_resource path="res://RPANEL-BatteryVoltage.gd" type="Script" id=5]

[sub_resource type="FontFile" id=9]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 9 )

[sub_resource type="FontFile" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 3 )

[node name="Control" type="Control"]
anchor_right = 0.524
anchor_bottom = 0.724
offset_right = -0.0800781
offset_bottom = 0.0799561
custom_minimum_size = Vector2( 1006, 782 )
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1006.0
offset_bottom = 782.0
pivot_offset = Vector2( -660, 35 )
color = Color( 0.94902, 0.94902, 0.94902, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 3.628
offset_left = 60.0
offset_top = 60.0
offset_right = -60.0
offset_bottom = -3196.24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_right = 886.0
offset_bottom = 662.0
theme_override_constants/separation = 24

[node name="CarStatus" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_right = 886.0
offset_bottom = 662.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/CarStatus"]
offset_right = 886.0
offset_bottom = 600.0

[node name="BatteryVoltageChart" parent="MarginContainer/VBoxContainer/CarStatus/MarginContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 886.0
offset_bottom = 600.0
custom_minimum_size = Vector2( 886, 600 )

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/CarStatus"]
offset_top = 604.0
offset_right = 886.0
offset_bottom = 633.0
theme = SubResource( 4 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )

[node name="BatteryVoltageBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CarStatus"]
offset_top = 637.0
offset_right = 886.0
offset_bottom = 662.0

[node name="BatteryVoltage" type="Label" parent="MarginContainer/VBoxContainer/CarStatus/BatteryVoltageBox"]
offset_right = 254.0
offset_bottom = 25.0
theme = SubResource( 5 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "Recent Battery Voltage:"

[node name="BatteryVoltageCurrent" type="Label" parent="MarginContainer/VBoxContainer/CarStatus/BatteryVoltageBox"]
offset_left = 258.0
offset_right = 318.0
offset_bottom = 25.0
theme = SubResource( 5 )
theme_override_colors/font_color = Color( 0.105882, 0.117647, 0.760784, 1 )
text = "7.93V"

[node name="serialData" parent="." instance=ExtResource( 4 )]
